# helloworld

./: CMakeLists.txt
src/app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
src/businesslogic/: CMakeLists.txt  businesslogic.h
